fix: semantics of LinkedList (#544)